--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 <span>Rolex</span>
             </div>
             <ul>
-                <li><a href="collections.html">Collection</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="offers.html">Offers</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#collections">Collection</a></li>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#offers">Offers</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="search">
                 <i class="fa fa-search" aria-hidden="true"></i>
@@ -46,17 +46,11 @@
             </div>
 
             <div class="btn">
-                <a href="order.html">Order Now</a>
+                <a href="#order">Order Now</a>
             </div>
         </section>
 
-        <footer class="media">
-            <ul>
-                <li><a href="https://www.facebook.com/Rolex" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                <li><a href="https://www.instagram.com/Rolex" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                <li><a href="https://twitter.com/Rolex" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-            </ul>
-        </footer>
+        
     </main>
 
     <script>
@@ -115,24 +109,11 @@
 
         TweenMax.from(".img", 2, {
             opacity: 0,
-            delay: 2.9,
+            delay: 1.9,
             y: -800,
             ease: Expo.easeInOut
         })
 
-        TweenMax.from(".year", 1, {
-            opacity: 0,
-            delay: 1.4,
-            y: -20,
-            ease: Expo.easeInOut
-        })
-
-        TweenMax.staggerFrom(".media ul li", 2, {
-            opacity: 0,
-            delay: 3.2,
-            y: 40,
-            ease: Expo.easeInOut
-        }, 0.2)
     </script>
 </body>
 
